adicionando responsividade a section metodo

--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/metodos.css">
     <title>Transforme</title>
 </head>
 
@@ -42,6 +43,33 @@
                 </div>
             </div>
         </section>
+        <section class="metodos">
+            <div class="scroll_down">
+                <img src="../imagens/icons/arrow_down.png" alt="" srcset="">
+            </div>
+            <div class="metodo_content">
+                <div class="ilustration"><img src="../imagens/metodos/eatingMethod.png" alt="" srcset=""></div>
+                <div class="metodo_text">
+                    <h2 class="metodo_title">MÉTODOS</h2>
+
+                    <div class="principal_text">
+                        <p>Usamos de
+                            <br>
+                            <span>estratégia </span> e a <span>criatividade </span> para
+                            <br> obter o melhor resultado para nossos alunos
+                        </p>
+                    </div>
+                    <div class="sub_text">
+                        <p>Você está cansado de buscar o corpo que deseja e desistir por conta de dietas radicais e uma alimentação fora da sua realidade? Nossos cursos são sua luz no fim do tunel alimentação, exercicios e dietas que são aplicáveis a você
+                            com uma evolução gradativa e uma amizade boa com a alimentação
+                        </p>
+                    </div>
+
+                </div>
+
+            </div>
+        </section>
+
     </main>
 </body>
 <script src="../js/responsive.js"></script>
