criando a section cursos

--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/metodos.css">
+    <link rel="stylesheet" href="../css/cursos.css">
     <title>Transforme</title>
 </head>
 
@@ -52,7 +53,7 @@
                 <div class="metodo_text">
                     <h2 class="metodo_title">MÉTODOS</h2>
 
-                    <div class="principal_text">
+                    <div class="principal_text behavior">
                         <p>Usamos de
                             <br>
                             <span>estratégia </span> e a <span>criatividade </span> para
@@ -64,7 +65,42 @@
                             com uma evolução gradativa e uma amizade boa com a alimentação
                         </p>
                     </div>
-
+                </div>
+            </div>
+        </section>
+        <section class="cursos">
+            <div class="content_cursos">
+                <div class="cursos_box">
+                    <div class="instagram"></div>
+                </div>
+                <div class="nossos_cursos">
+                    <div class="cursos_textos">
+                        <div class="cursos_title behavior">
+                            <h1>Nossos <span>cursos</span> </h1>
+                        </div>
+                        <div class="cursos_subtitle">
+                            <p>Está na hora de mudar sua vida, começando pela sua saúde. <br> Escolha umas das alternativas ao lado qual se aplica perfeitamente a você</p>
+                        </div>
+                    </div>
+                    <div class="cursos_nav">
+                        <div class="forma">
+                            <div class="icon_cursos">
+                                <img src="" alt="" srcset="">
+                            </div>
+                            <div class="descricao">
+                                <p></p>
+                            </div>
+                        </div>
+                        <div class="alimentacao">
+                            <div class="icon_cursos">
+                                <img src="" alt="" srcset="">
+                            </div>
+                            <div class="descricao">
+                                <p>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
             </div>
