--- a/html/index.html
+++ b/html/index.html
@@ -75,29 +75,40 @@
                 </div>
                 <div class="nossos_cursos">
                     <div class="cursos_textos">
-                        <div class="cursos_title behavior">
-                            <h1>Nossos <span>cursos</span> </h1>
-                        </div>
-                        <div class="cursos_subtitle">
-                            <p>Está na hora de mudar sua vida, começando pela sua saúde. <br> Escolha umas das alternativas ao lado qual se aplica perfeitamente a você</p>
+                        <div class="info">
+                            <div class="cursos_title behavior">
+                                <h1>Nossos <span>cursos</span> </h1>
+                            </div>
+                            <div class="sub_text cursos_subtext ">
+                                <p>Está na hora de mudar sua vida, começando pela sua saúde. <br> Escolha umas das alternativas ao lado qual se aplica perfeitamente a você</p>
+                            </div>
                         </div>
                     </div>
                     <div class="cursos_nav">
-                        <div class="forma">
+                        <div class="forma card_curso">
                             <div class="icon_cursos">
-                                <img src="" alt="" srcset="">
+                                <img src="../imagens/cursos/icons/perda-de-peso.png" alt="" srcset="">
                             </div>
                             <div class="descricao">
-                                <p></p>
+                                <div class="curso_name">
+                                    <h1>Fitness</h1>
+                                </div>
+                                <div class="sub_text sub_text_curso">
+                                    <p>Cursos fitness para pessoas bonitas</p>
+                                </div>
                             </div>
                         </div>
-                        <div class="alimentacao">
+                        <div class="alimentacao card_curso">
                             <div class="icon_cursos">
-                                <img src="" alt="" srcset="">
+                                <img src="../imagens/cursos/icons/praca-de-alimentacao.png" alt="" srcset="">
                             </div>
                             <div class="descricao">
-                                <p>
-                                </p>
+                                <div class="curso_name">
+                                    <h1>Alimentação</h1>
+                                </div>
+                                <div class="sub_text sub_text_curso">
+                                    <p>Cursos de alimentação para pessoas bonitas</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -109,5 +120,6 @@
     </main>
 </body>
 <script src="../js/responsive.js"></script>
+<script src="../js/cursosbox.js"></script>
 
 </html>
