--- a/html/index.html
+++ b/html/index.html
@@ -69,6 +69,7 @@
             </div>
         </section>
         <section class="cursos">
+
             <div class="content_cursos">
                 <div class="cursos_box">
                     <div class="instagram"></div>
@@ -113,7 +114,8 @@
                         </div>
                     </div>
                 </div>
-
+                <div class="modal">
+                </div>
             </div>
         </section>
 
