adicionando a feature de fechar o modal

--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/metodos.css">
     <link rel="stylesheet" href="../css/cursos.css">
+    <link rel="stylesheet" href="../css/modal.css">
     <title>Transforme</title>
 </head>
 
@@ -115,6 +116,14 @@
                     </div>
                 </div>
                 <div class="modal">
+                    <div class="content_modal">
+                        <div class="close_modal">
+                            <p>X</p>
+                        </div>
+                        <div class="cards_modal">
+
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
