--- a/html/index.html
+++ b/html/index.html
@@ -24,9 +24,8 @@
             <nav class="menu">
                 <ul>
                     <li class="links">HOME</li>
-                    <li class="links">DICAS</li>
                     <li class="links">SOBRE</li>
-                    <li class="links">OUTROS</li>
+                    <li class="links">CURSOS</li>
                 </ul>
             </nav>
         </div>
